--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
             <button class="search-btn">🔍</button>
 
             <div class="nav-item">
-                <a href="http://127.0.0.1:5500/login.html " target="_blank">
+                <a href="http://127.0.0.1:5500/E-Commerce/login.html " target="_blank">
                     HELLO! Sign in <br>
                     <b>Account & Lists ▽</b>
                 </a>
             </div>
 
             <div class="nav-item">
-                <a href="http://127.0.0.1:5500/returnordrer.html" target="_blank">
+                <a href="http://127.0.0.1:5500/E-Commerce/returnordrer.html" target="_blank">
                     Return & <b>Orders</b>
                 </a>
             </div>
@@ -49,7 +49,7 @@
             </div>
 
             <div class="nav-item">
-                <a href="http://127.0.0.1:5500/contectus.html" target="_blank">
+                <a href="http://127.0.0.1:5500/E-Commerce/contectus.html" target="_blank">
                     📞 Contact Us
                 </a>
             </div>
@@ -68,7 +68,7 @@
                     <h3>Desi Ghee</h3>
                     <p>High quality product with best features and durability.</p>
                     <div class="price">₹999</div>
-                    <a href="http://127.0.0.1:5500/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
+                    <a href="http://127.0.0.1:5500/E-Commerce/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
                 </div>
 
                 <div class="card">
@@ -76,7 +76,7 @@
                     <h3>Desi Aachar</h3>
                     <p>Stylish and modern design perfect for everyday use.</p>
                     <div class="price">₹200</div>
-                    <a href="http://127.0.0.1:5500/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
+                    <a href="http://127.0.0.1:5500/E-Commerce/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
                 </div>
 
                 <div class="card">
@@ -84,7 +84,7 @@
                     <h3>Trimmer</h3>
                     <p>Compact, lightweight and extremely durable.</p>
                     <div class="price">₹799</div>
-                    <a href="http://127.0.0.1:5500/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
+                    <a href="http://127.0.0.1:5500/E-Commerce/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
                 </div>
 
                 <div class="card">
@@ -92,16 +92,12 @@
                     <h3>iPhone 17 Pro Max</h3>
                     <p>Premium quality with a beautiful finish.</p>
                     <div class="price">₹149000</div>
-                    <a href="http://127.0.0.1:5500/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
+                    <a href="http://127.0.0.1:5500/E-Commerce/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
                 </div>
 
             </div>
         </div>
     </section>
-
-    <!--extraaa-->
-
-
     <!-- PRODUCT SECTION -->
     <section class="section">
         <div class="container">
@@ -111,7 +107,7 @@
                     <h3>Smart Watch</h3>
                     <p>High quality product with best features and durability.</p>
                     <div class="price">₹999</div>
-                    <a href="http://127.0.0.1:5500/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
+                    <a href="http://127.0.0.1:5500/E-Commerce/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
                 </div>
 
                 <div class="card">
@@ -119,7 +115,7 @@
                     <h3>BoAt bluetoth</h3>
                     <p>Stylish and modern design perfect for everyday use.</p>
                     <div class="price">₹2000</div>
-                    <a href="http://127.0.0.1:5500/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
+                    <a href="http://127.0.0.1:5500/E-Commerce/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
                 </div>
 
                 <div class="card">
@@ -127,7 +123,7 @@
                     <h3>Bottle</h3>
                     <p>Compact, lightweight and extremely durable.</p>
                     <div class="price">₹799</div>
-                    <a href="http://127.0.0.1:5500/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
+                    <a href="http://127.0.0.1:5500/E-Commerce/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
                 </div>
 
                 <div class="card">
@@ -135,15 +131,12 @@
                     <h3>Cloth</h3>
                     <p>Premium quality with a beautiful finish.</p>
                     <div class="price">₹2000</div>
-                    <a href="http://127.0.0.1:5500/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
+                    <a href="http://127.0.0.1:5500/E-Commerce/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
                 </div>
 
             </div>
         </div>
     </section>
-
-    <!-- --extraaa-- -->
-
     <section class="section">
         <div class="container">
             <div class="products">
@@ -153,7 +146,7 @@
                     <h3>Pants for man</h3>
                     <p>High quality product with best features and durability.</p>
                     <div class="price">₹999</div>
-                    <a href="http://127.0.0.1:5500/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
+                    <a href="http://127.0.0.1:5500/E-Commerce/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
                 </div>
 
                 <div class="card">
@@ -161,7 +154,7 @@
                     <h3>Laptop </h3>
                     <p>“High-Performance Laptop with Ultra-Fast SSD”</p>
                     <div class="price">₹125000</div>
-                    <a href="http://127.0.0.1:5500/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
+                    <a href="http://127.0.0.1:5500/E-Commerce/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
                 </div>
 
                 <div class="card">
@@ -169,7 +162,7 @@
                     <h3>Shoose </h3>
                     <p>Compact, lightweight and extremely durable.</p>
                     <div class="price">₹999</div>
-                    <a href="http://127.0.0.1:5500/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
+                    <a href="http://127.0.0.1:5500/E-Commerce/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
                 </div>
 
                 <div class="card">
@@ -177,15 +170,12 @@
                     <h3>T-Shirt</h3>
                     <p>Premium quality with a beautiful finish.</p>
                     <div class="price">₹1000</div>
-                    <a href="http://127.0.0.1:5500/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
+                    <a href="http://127.0.0.1:5500/E-Commerce/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
                 </div>
 
             </div>
         </div>
     </section>
-
-    <!-- =========--extraaa-- -->
-
        <section class="section">
         <div class="container">
             <div class="products">
@@ -195,7 +185,7 @@
                     <h3>Study Table</h3>
                     <p>High quality product with best features and durability.</p>
                     <div class="price">₹899</div>
-                    <a href="http://127.0.0.1:5500/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
+                    <a href="http://127.0.0.1:5500/E-Commerce/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
                 </div>
 
                 <div class="card">
@@ -203,7 +193,7 @@
                     <h3>Bag </h3>
                     <p>“High-Performance Laptop with Ultra-Fast SSD”</p>
                     <div class="price">₹400</div>
-                    <a href="http://127.0.0.1:5500/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
+                    <a href="http://127.0.0.1:5500/E-Commerce/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
                 </div>
 
                 <div class="card">
@@ -211,7 +201,7 @@
                     <h3>Ear ring </h3>
                     <p>Compact, lightweight and extremely durable.</p>
                     <div class="price">₹399</div>
-                    <a href="http://127.0.0.1:5500/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
+                    <a href="http://127.0.0.1:5500/E-Commerce/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
                 </div>
 
                 <div class="card">
@@ -219,7 +209,7 @@
                     <h3>Snicker</h3>
                     <p>Premium quality with a beautiful finish.</p>
                     <div class="price">₹399</div>
-                    <a href="http://127.0.0.1:5500/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
+                    <a href="http://127.0.0.1:5500/E-Commerce/oderedDotails.html" target="_blank" class="btn">Buy Now</a>
                 </div>
 
             </div>
@@ -270,8 +260,7 @@
         <p class="copyright">
             © 2025 ShopEase. All rights reserved.
         </p>
-    </footer>
-     <script src="script.js"></script>
-    
+    </footer> 
+    <script src="script.js"></script>   
 </body>
 </html>
